--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@
 *.exe
 *.o
 *.so
-*.tmp
-tmp.*
 
 # Packages #
 ############
@@ -25,21 +23,16 @@ tmp.*
 # Logs and databases #
 ######################
 *.log
-#*.sql
+*.sql
 *.sqlite
 
 # OS generated files #
 ######################
+.DS_Store
 .DS_Store?
-ehthumbs.db
+._*
+.Spotlight-V100
+.Trashes
 Icon?
+ehthumbs.db
 Thumbs.db
-
-
-# Eclipse dirs       #
-######################
-#.classpath
-#.project
-#.settings
-.metadata
-bin
