--- a/src/java/varioml/.classpath
+++ b/src/java/varioml/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/bson4jackson-1.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-all-1.9.9.jar"/>
 	<classpathentry kind="lib" path="lib/simple-xml-2.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
