--- a/src/java/varioml/.classpath
+++ b/src/java/varioml/.classpath
@@ -7,12 +7,14 @@
 	<classpathentry kind="lib" path="lib/joda-time-1.6.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit-dep-4.9b4.jar"/>
 	<classpathentry kind="lib" path="lib/exificient.jar"/>
-	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="lib/bson4jackson-1.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-all-1.9.9.jar"/>
 	<classpathentry kind="lib" path="lib/simple-xml-2.5.3.jar"/>
-	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="lib" path="lib/xml-writer.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/bson4jackson-2.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-module-jaxb-annotations-2.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
