missing library added (jackson-module-jsonSchema)

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ dependencies {
  compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.2'
  compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jaxb-annotations', version: '2.8.2'
 
- //compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jsonSchema', version: '2.8.2'
+ compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jsonSchema', version: '2.8.2'
  compile group: 'com.kjetland', name: 'mbknor-jackson-jsonschema_2.11', version: '1.0.6'
 
  compile group: 'xml-apis', name: 'xml-apis', version: '1.4.01'
